--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ body {
   background-color: #f7f7f7;
   color: #333;
 }
+.heading{
+    text-align: center;
+    font-size: 4rem;
+    color: #333;
+    padding: 1rem;
+    margin: 2rem 0;
+    background: rgba(88, 51, 255, 0.05);
+
+}
+
+.heading span{
+    color: blue;
+}
 
 /* Header */
 header {
@@ -130,6 +143,29 @@ header .fa-bars{
   font-weight: bold;
   padding-left: 13rem;
 }
+.about .row{
+    display: flex;
+    align-items:center;
+    gap:2rem;
+    flex-wrap:wrap;
+    padding:2rem 0;
+    padding-bottom:3rem;
+}
+.about .row .content{
+    flex:1 1 40rem;
+}
+.about .row .content h3{
+    font-size:3rem;
+    color:#333;
+}
+.about .row .content p{
+    font-size:1rem;
+    color:#999;
+    padding:.5rem 0;
+    padding-top:1rem;
+    line-height: 1;
+}
+
 .foot-panel{
     background-color: #222f3d;
     color:white;
@@ -142,4 +178,36 @@ header .fa-bars{
 }
 .copyright{
     padding-top: 5px;
+}
+
+@media (max-width: 600px) {
+  .home {
+    width: 100%;
+    height: 300px;
+  }
+
+  .home .content h3 {
+    font-size: 2rem;
+    padding-left: 1rem;
+  }
+
+  .home .content span {
+    font-size: 1.2rem;
+    padding-left: 1rem;
+  }
+
+  .box {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  header nav a {
+    font-size: 1.2rem;
+    margin-left: 0.5rem;
+  }
+
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
